<resources>
    <string name="app_name">My Personal Trainer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--App Strings-->
    <string name="AppName">My Personal Trainer</string>
    <string name="LoginSuccess">Login Successful</string>
    <string name="UserName">jdoe</string>
    <string name="UserEmail">jdoe@congloco.com</string>
    <string name="Password">welcome1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Additional Resources-->
    <string name="session">Sessions</string>
    <string name="customer">Customers</string>
    <string name="title_activity_customer_list">My Personal Trainer</string>
    <string name="title_activity_customer_edit">My Personal Trainer</string>

    <!--Customer Edit Activity-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="known_as">Known As</string>
    <string name="email">Email</string>
    <string name="take_photo">Take Customer Photo</string>
    <string name="phone">Phone Number</string>
    <string name="address_one">Address One</string>
    <string name="address_two">Address Two</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="save">Save Customer</string>
    <string name="pay">Customer Payment</string>
    <string-array name="state">
        <item>Florida</item>
        <item>Georgia</item>
        <item>South Carolina</item>
    </string-array>
    <string-array name="payment">
        <item>Cash</item>
        <item>Check</item>
        <item>Credit Card</item>
    </string-array>
    <string name="edit">Edit</string>
    <string name="billing">Billing</string>
    <string name="title_activity_custom_view">CustomViewActivity</string>
    <string name="title_activity_session_list">SessionListActivity</string>

</resources>

